fixed scrollbars

--- a/public/scss/newsfeed.scss
+++ b/public/scss/newsfeed.scss
@@ -85,7 +85,6 @@ header {
 			display: flex;
 			flex-direction: column;
 			width: 70%;
-			overflow: scroll;
 			margin-top: 15px;
 			border: 2px solid black;
 		}
@@ -323,7 +322,6 @@ header {
 	justify-content: space-between;
 	flex-direction: column;
 	width: 88%;
-	overflow: scroll;
 	margin-left: 10px; 
 
 	a {
